<?xml version="1.0"?>
<package>
    <name>pomcp_ros</name>
    <version>0.0.0</version>
    <description>Rocksample POMCP in ROS</description>

    <maintainer email="marco.piccinelli@studenti.univr.it">Marco</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
    <build_depend>tf_conversions</build_depend>
    <run_depend>tf_conversions</run_depend>
    <build_depend>eigen_conversions</build_depend>
    <run_depend>eigen_conversions</run_depend>
    <build_depend>move_base_msgs</build_depend>
    <run_depend>move_base_msgs</run_depend>

</package>
